edits to layout

--- a/index.html
+++ b/index.html
@@ -10,18 +10,34 @@
    </head>
    <body>
       <div id="app-container">
-        <div>
-
-        </div>
-
 
         <div class="jumbotron text-center opener">
+          <div class="nav-bar">
+              <ul>
+                <li><img src="./images/images/room-me-logo-white.svg" class="img-1"/></li>
+                <li><i class="fa fa-bars" aria-hidden="true"></i></li>
+              </ul>
+          </div>
+          <div class="real-navbar">
+            <div class="navbary">
+            <img src="./images/images/room-me-logo-white.svg" class="img-navy"/>
+          </div>
+          <div class="register">
+            <p> Register </p>
+            <p>Log in</p>
+          </div>
+        </div>
           <h1>Living Together Made Easy</h1>
           <h6>Find your perfect roommmate</h6>
+          <div class=search-1>
           <form class="search-bar">
             <input type="text" placeholder="Where are you searching?" required>
-            <input type="button" value="Search" >
+            <i class="fa fa-search" aria-hidden="true"></i>
+
+
+            <!-- <input type="button" value="Search" > -->
           </form>
+        </div>
         </div>
 
         <div class="jumbotron text-center second-string ">
@@ -74,16 +90,17 @@
       Tell them about us. </p>
       <p>Share on</p>
       <div class="social-media">
-        <img src="images/images/solrod-facebook.svg" class="social"/>
-        <img src="images/images/solrod-instagram.svg" class="social"/>
-        <img src="images/images/solrod-twitter.svg"class="social"/>
-      </div>
+        <ul>
+          <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+          <li><i class="fa fa-google-plus" aria-hidden="true"></i></li>
+          <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+        </ul>
       <div>
         <p> or </p>
       </div>
       <form>
         <input type="text" placeholder="enter a friends email address " required>
-        <input type="button" value="Yep">
+        <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
       </form>
    </div>
  </div>
@@ -150,7 +167,7 @@
   </div>
 </div>
 
-<div class="container fluid text-center footer">
+<div class="container-fluid text-center footer">
     <div class="top-list">
       <ul>
         <li>How it Works</li>
@@ -159,10 +176,68 @@
         <li> Imprint</li>
       </ul>
 
-      <img src="images/images/google-play.png"/>
+      <img src="images/images/google-play.png" class="footer-img"/>
+    </div>
+    <div class="social-list">
+        <ul>
+          <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+          <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+          <li><i class="fa fa-google-plus" aria-hidden="true"></i></li>
+          </ul>
+      </div>
+      <div class="the-end">
+      <p><i class="fa fa-copyright" aria-hidden="true"></i>2015 room.me</p>
+      </div>
     </div>
 
+<div class="container-fluid big-foot">
+  <div class="row footer-row">
+    <div class="col-md-4">
+      <div class="left-side">
+    <img src="./images/images/room-me-logo-white.svg" class="img-2"/>
+    <p><i class="fa fa-copyright" aria-hidden="true"></i>2015 room.me</p>
+  </div>
 </div>
+  <div class="col-md-4">
+    <div class="middle">
+      <div class="list-1">
+      <ul>
+        <li>Quick Links</li>
+        <li>How It Works</li>
+        <li>FAQ</li>
+        <li>Blog</li>
+        <li>Imprint</li>
+      </ul>
+    </div>
+    <div class="list-2">
+      <ul>
+        <li>Rooms for Rent</li>
+        <li>San Francisco</li>
+        <li>Los Angeles</li>
+        <li>San Jose</li>
+        <li>Sacramento</li>
+        <li>San Diego</li>
+        <li>Boston</li>
+      </ul>
+    </div>
+  </div>
+</div>
+    <div class="col-md-4">
+    <div class="right-side">
+      <h6>Download the App</h6>
+      <img src="images/images/google-play.png" class="footer-img"/>
+      <h6> Follow Us </h6>
+      <ul>
+        <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+        <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+        <li><i class="fa fa-google-plus" aria-hidden="true"></i></li>
+        </ul>
+    </div>
+  </div>
+</div>
+
+</div>
+
 
 
     </div>
