changes to featured and footer

--- a/index.html
+++ b/index.html
@@ -136,28 +136,31 @@
       <h3>Featured Rooms</h3>
       <div class="col-xs-12 col-md-4"/>
       <div class="thumbnail t-nails">
-      <img src="images/images/featured-02.jpg"/>
+      <img src="images/images/featured-02.jpg" class="featured-img"/>
       <p> 2 Bedroom Available in a 3 Br/2..</p>
       <p> $2,200 | Oct 1, 2016</p>
       <img src="images/images/featured-user-02.jpg" class="tina"/>
+      <i class="fa fa-heart-o" aria-hidden="true"></i>
     </div>
   </div>
 
   <div class="col-xs-12 col-md-4"/>
     <div class="thumbnail t-nails">
-      <img src="images/images/featured-03.jpg"/>
+      <img src="images/images/featured-03.jpg" class="featured-img"/>
       <p> Looking for a great roomie - BH...</p>
       <p> $1,200 | Nov 1,2016 </p>
       <img src="images/images/featured-user-03.jpg" class="buds"/>
+      <i class="fa fa-heart-o" aria-hidden="true"></i>
     </div>
   </div>
 
   <div class="col-xs-12 col-md-4"/>
     <div class="thumbnail t-nails">
-      <img src="images/images/featured-01.jpg"/>
+      <img src="images/images/featured-01.jpg" class="featured-img"/>
       <p> Large Double Available </p>
       <p> $1,000 | Sep 8, 2016 - Jan 1,2017 </p>
       <img src="images/images/featured-user-01.jpg" class="nicole"/>
+      <i class="fa fa-heart-o" aria-hidden="true"></i>
     </div>
   </div>
 </div>
@@ -202,7 +205,7 @@
     <div class="middle">
       <div class="list-1">
       <ul>
-        <li>Quick Links</li>
+        <p>Quick Links</p>
         <li>How It Works</li>
         <li>FAQ</li>
         <li>Blog</li>
@@ -211,7 +214,7 @@
     </div>
     <div class="list-2">
       <ul>
-        <li>Rooms for Rent</li>
+        <p>Rooms for Rent</p>
         <li>San Francisco</li>
         <li>Los Angeles</li>
         <li>San Jose</li>
@@ -226,12 +229,14 @@
     <div class="right-side">
       <h6>Download the App</h6>
       <img src="images/images/google-play.png" class="footer-img"/>
-      <h6> Follow Us </h6>
+      <div class="social-icons">
       <ul>
+        <h6> Follow Us </h6>
         <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
         <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
         <li><i class="fa fa-google-plus" aria-hidden="true"></i></li>
-        </ul>
+      </ul>
+      </div>
     </div>
   </div>
 </div>
