changes to width,navbar and background

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="./css/styles.css">
    </head>
    <body>
-      <div id="app-container">
+      <div>
 
         <div class="jumbotron text-center opener">
           <div class="nav-bar">
@@ -40,9 +40,11 @@
         </div>
         </div>
 
-        <div class="jumbotron text-center second-string ">
-            <h4> Do you have a room for rent? </h4>
+        <div class="jumbotron text-center second-string">
+          <div class="room-rent">
+            <h3> Do you have a room for rent?</h3>
             <p> With room.me it's easy to find roommates who match your personality.</p>
+          </div>
             <div class="btn-group " role="group" aria-label="...">
               <button type="button" class="btn btn-1">Post Your Room</button>
         </div>
@@ -243,3 +245,16 @@
     </div>
    </body>
 </html>
+
+<!-- __INSTRUCTOR-EVALUATION__
+site is not taking up full-width of page and missing crucial styling and positioning
+requirements.
+
+good job w/ creating double footer (one for mobile one for tablet)
+
+To pass this assignment:
+- make the site extend the full width of the screen (with inner content containing a max-witdht) ,
+- fix the nav bar
+- and fix .second-string element so that the text is readable
+
+ __END__-->
